--- a/OnlineLibrary/OnlineLibrary/OnlineLibrary.csproj
+++ b/OnlineLibrary/OnlineLibrary/OnlineLibrary.csproj
@@ -6,4 +6,9 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="bootstrap" Version="5.3.2" />
+    <PackageReference Include="FontAwesome" Version="4.7.0" />
+  </ItemGroup>
+
 </Project>
