--- a/OnlineLibrary/OnlineLibrary/OnlineLibrary.csproj
+++ b/OnlineLibrary/OnlineLibrary/OnlineLibrary.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.3.3" />
     <PackageReference Include="FontAwesome" Version="4.7.0" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
