--- a/OnlineLibrary/OnlineLibrary/OnlineLibrary.csproj
+++ b/OnlineLibrary/OnlineLibrary/OnlineLibrary.csproj
@@ -9,13 +9,16 @@
   <ItemGroup>
     <PackageReference Include="bootstrap" Version="5.3.3" />
     <PackageReference Include="FontAwesome" Version="4.7.0" />
+    <PackageReference Include="Google.Apis.Books.v1" Version="1.67.0.3331" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNet.WebPages" Version="3.3.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="System.Runtime.Serialization.Json" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Models\Domain\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
